# lambda-rie-boilerplate

./: LICENSE  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
docker/: Dockerfile
lambda/: handlers.py
